--- a/bananatree/imgui.ini
+++ b/bananatree/imgui.ini
@@ -1,5 +1,6 @@
 [Window][Debug##Default]
-Pos=0,0
+ViewportPos=34,57
+ViewportId=0x9F5F46A1
 Size=400,400
 Collapsed=0
 
@@ -44,7 +45,7 @@ Collapsed=0
 
 [Window][banana tree editor]
 Pos=0,0
-Size=46,32
+Size=32,32
 Collapsed=0
 
 [Window][viewport]
@@ -170,5 +171,5 @@ DockSpace       ID=0xA0D3CDBE Window=0x9F65601B Pos=0,24 Size=32,8 Split=Y
     DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=1212,837 Split=X
       DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=840,837 CentralNode=1 Selected=0x995B0CF8
       DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=370,837 Selected=0x27CF05AC
-  DockNode      ID=0x00000006 Parent=0xA0D3CDBE SizeRef=1584,239 Selected=0xB7722E25
+  DockNode      ID=0x00000006 Parent=0xA0D3CDBE SizeRef=1584,239 Selected=0x327E7725
 
