--- a/bananatree/imgui.ini
+++ b/bananatree/imgui.ini
@@ -167,9 +167,9 @@ DockId=0x00000006,1
 [Docking][Data]
 DockSpace       ID=0xA0D3CDBE Window=0x9F65601B Pos=0,24 Size=32,8 Split=Y
   DockNode      ID=0x00000005 Parent=0xA0D3CDBE SizeRef=1584,596 Split=X
-    DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=370,837 Selected=0x9A68760C
+    DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=370,837 Selected=0xCF26E4DD
     DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=1212,837 Split=X
-      DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=840,837 CentralNode=1 Selected=0x995B0CF8
-      DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=370,837 Selected=0x27CF05AC
+      DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=840,837 CentralNode=1 Selected=0xBB60BD4D
+      DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=370,837 Selected=0x0C11C2EA
   DockNode      ID=0x00000006 Parent=0xA0D3CDBE SizeRef=1584,239 Selected=0x327E7725
 
