--- a/bananatree/imgui.ini
+++ b/bananatree/imgui.ini
@@ -1,5 +1,6 @@
 [Window][Debug##Default]
-Pos=1276,499
+ViewportPos=1286,537
+ViewportId=0x9F5F46A1
 Size=400,400
 Collapsed=0
 
@@ -44,7 +45,7 @@ Collapsed=0
 
 [Window][banana tree editor]
 Pos=0,0
-Size=1600,900
+Size=32,173
 Collapsed=0
 
 [Window][viewport]
@@ -53,26 +54,26 @@ Size=784,268
 Collapsed=0
 
 [Window][Viewport]
-Pos=376,24
-Size=852,624
+Pos=17,24
+Size=6,105
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Scene Hierarchy]
 Pos=0,24
-Size=374,624
+Size=15,105
 Collapsed=0
 DockId=0x00000003,1
 
 [Window][Log]
-Pos=0,650
-Size=1600,250
+Pos=0,131
+Size=32,42
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Property Editor]
-Pos=1230,24
-Size=370,624
+Pos=25,24
+Size=7,105
 Collapsed=0
 DockId=0x00000002,2
 
@@ -83,8 +84,8 @@ Size=872,679
 Collapsed=0
 
 [Window][Model registry]
-Pos=1230,24
-Size=370,624
+Pos=25,24
+Size=7,105
 Collapsed=0
 DockId=0x00000002,0
 
@@ -99,8 +100,8 @@ Size=370,208
 Collapsed=0
 
 [Window][Project editor]
-Pos=1230,24
-Size=370,624
+Pos=25,24
+Size=7,105
 Collapsed=0
 DockId=0x00000002,1
 
@@ -141,34 +142,34 @@ Collapsed=0
 
 [Window][Script registry]
 Pos=0,24
-Size=374,624
+Size=15,105
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Material editor]
 Pos=0,24
-Size=374,624
+Size=15,105
 Collapsed=0
 DockId=0x00000003,2
 
 [Window][Texture viewer]
-Pos=376,24
-Size=852,624
+Pos=17,24
+Size=6,105
 Collapsed=0
 DockId=0x00000001,1
 
 [Window][Lighting]
-Pos=0,650
-Size=1600,250
+Pos=0,131
+Size=32,42
 Collapsed=0
 DockId=0x00000006,1
 
 [Docking][Data]
-DockSpace       ID=0xA0D3CDBE Window=0x9F65601B Pos=0,24 Size=1600,876 Split=Y
+DockSpace       ID=0xA0D3CDBE Window=0x9F65601B Pos=10,62 Size=32,149 Split=Y
   DockNode      ID=0x00000005 Parent=0xA0D3CDBE SizeRef=1584,596 Split=X
     DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=370,837 Selected=0xCF26E4DD
     DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=1212,837 Split=X
-      DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=840,837 CentralNode=1 Selected=0x995B0CF8
+      DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=840,837 CentralNode=1 Selected=0xBB60BD4D
       DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=370,837 Selected=0x0C11C2EA
   DockNode      ID=0x00000006 Parent=0xA0D3CDBE SizeRef=1584,239 Selected=0x327E7725
 
