--- a/bananatree/imgui.ini
+++ b/bananatree/imgui.ini
@@ -45,7 +45,7 @@ Collapsed=0
 
 [Window][banana tree editor]
 Pos=0,0
-Size=32,173
+Size=32,32
 Collapsed=0
 
 [Window][viewport]
@@ -55,25 +55,25 @@ Collapsed=0
 
 [Window][Viewport]
 Pos=17,24
-Size=6,105
+Size=6,4
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Scene Hierarchy]
 Pos=0,24
-Size=15,105
+Size=15,4
 Collapsed=0
 DockId=0x00000003,1
 
 [Window][Log]
-Pos=0,131
-Size=32,42
+Pos=0,30
+Size=32,2
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Property Editor]
 Pos=25,24
-Size=7,105
+Size=7,4
 Collapsed=0
 DockId=0x00000002,2
 
@@ -85,7 +85,7 @@ Collapsed=0
 
 [Window][Model registry]
 Pos=25,24
-Size=7,105
+Size=7,4
 Collapsed=0
 DockId=0x00000002,0
 
@@ -101,7 +101,7 @@ Collapsed=0
 
 [Window][Project editor]
 Pos=25,24
-Size=7,105
+Size=7,4
 Collapsed=0
 DockId=0x00000002,1
 
@@ -142,34 +142,34 @@ Collapsed=0
 
 [Window][Script registry]
 Pos=0,24
-Size=15,105
+Size=15,4
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Material editor]
 Pos=0,24
-Size=15,105
+Size=15,4
 Collapsed=0
 DockId=0x00000003,2
 
 [Window][Texture viewer]
 Pos=17,24
-Size=6,105
+Size=6,4
 Collapsed=0
 DockId=0x00000001,1
 
 [Window][Lighting]
-Pos=0,131
-Size=32,42
+Pos=0,30
+Size=32,2
 Collapsed=0
 DockId=0x00000006,1
 
 [Docking][Data]
-DockSpace       ID=0xA0D3CDBE Window=0x9F65601B Pos=10,62 Size=32,149 Split=Y
+DockSpace       ID=0xA0D3CDBE Window=0x9F65601B Pos=0,24 Size=32,8 Split=Y
   DockNode      ID=0x00000005 Parent=0xA0D3CDBE SizeRef=1584,596 Split=X
-    DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=370,837 Selected=0xCF26E4DD
+    DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=370,837 Selected=0x9A68760C
     DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=1212,837 Split=X
-      DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=840,837 CentralNode=1 Selected=0xBB60BD4D
+      DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=840,837 CentralNode=1 Selected=0x995B0CF8
       DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=370,837 Selected=0x0C11C2EA
   DockNode      ID=0x00000006 Parent=0xA0D3CDBE SizeRef=1584,239 Selected=0x327E7725
 
